--- a/src/main/resources/templates/add_sql.html
+++ b/src/main/resources/templates/add_sql.html
@@ -41,12 +41,13 @@
     <div class="container-fluid">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="/sql/addSql"><span class="glyphicon glyphicon-home"></span> Home</a>
+                <a class="navbar-brand" href="/index"><span class="glyphicon glyphicon-home"></span> Home</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="/sql/addSql">add sql</a></li>
+                    <li><a href="/sql/mixQuery">mix query</a></li>
                     <li><a href="/list">list</a></li>
                     <li><a href="/statistics">statistics</a></li>
                     <li><a href="/history">history</a></li>
