--- a/src/main/resources/templates/add_sql.html
+++ b/src/main/resources/templates/add_sql.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.springframework.org/schema/jdbc">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Title</title>
@@ -47,7 +47,6 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="/sql/addSql">add sql</a></li>
-                    <li><a href="/sql/mixQuery">mix query</a></li>
                     <li><a href="/list">list</a></li>
                     <li><a href="/statistics">statistics</a></li>
                     <li><a href="/history">history</a></li>
@@ -59,7 +58,7 @@
 <div class="clearfix nav-height"></div>
 <div class="container-fluid container-title">
     <div class="container container-title-content">
-        <h1>Create restful api</h1>
+        <h1>Add sql</h1>
         <p>将 sql 调用转换成 restful 接口的调用，这样方便分析统计 sql 的执行效率，简化service的开发。</p>
     </div>
 </div>
@@ -75,6 +74,9 @@
                     <div class="form-group">
                         <div class="form-group" style="width: 40%; float: left">
                             <input type="text" name="host" class="form-control" placeholder="host" />
+                            <ul class="typeahead dropdown-menu all-service" role="listbox" style="top: 278px; left: 119.5px;display:none">
+                                <li class="dropdown-li" th:each="item : ${hosts}"><a class="dropdown-item" th:text="${item}"></a></li>
+                            </ul>
                         </div>
                         <div class="param_black_div"></div>
                         <div class="form-group" style="width: 23%; float: left">
@@ -103,35 +105,51 @@
                     <button type="button" class="btn btn-default btn-xs" id="sql-param"> + sql param </button>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-default sql-button"> run </button>
-                    <button type="submit" class="btn btn-primary sql-button"> add </button>
+                    <button type="submit" class="btn btn-default sql-button" id="run-sql"> run </button>
+                    <button type="submit" class="btn btn-primary sql-button" id="sql-confirm"> add </button>
                 </div>
             </div>
         </div><!-- .panel -->
     </div><!-- .row -->
+    <div class="row">
+        <blockquote>
+            <p id="true-sql"></p>
+        </blockquote>
+        <table class="table table-bordered" id="sql-result">
+            <thead></thead>
+            <tbody></tbody>
+        </table>
+    </div><!-- .row -->
 </div><!-- .container -->
+
+<!-- Modal -->
+<div class="modal fade" id="para_list_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog modal-sm" role="document">
+        <div class="modal-content">
+            <div class="modal-body">
+                确认提交？
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">no</button>
+                <button type="button" class="btn btn-primary" id="sql-add">yes</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <script src="../../vender/jQuery/jquery-2.2.3.min.js"></script>
 <script src="../../vender/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 <script src="../../vender/jquery-highlighttextarea/jquery.highlighttextarea.js"></script>
-<script>
+<script src="../vender/bootstrap3-typeahead.js"></script>
+<script src="../../js/common.js"></script>
+<script th:inline="JavaScript">
     /*<![CDATA[*/
-    var sql_param_tpl='<div class="form-group param-item" data-type="json_param">'+
-            '<div class="sql_param_key_div form-group">'+
-                '<input type="text" class="form-control sql_param_key" placeholder="key">'+
-            '</div>'+
-            '<div class="param_black_div"></div>'+
-            '<div class="form-group sql_param_value_div">'+
-                '<input type="text" class="form-control sql_param_value" placeholder="value">'+
-            '</div>'+
-            '<div class="param_black_div"></div>'+
-            '<div class="form-group right-button">'+
-                '<a class="btn btn-default btn-xs glyphicon glyphicon-remove param-rm" href="#"></a>'+
-            '</div>'+
-            '</div>';
+    var sql_param_tpl= get_sql_param_tpl();
 
     $(function () {
         sql_init();
+        form_init();
         $(".highlightTextarea").css("width", "90%");
         $(document).on('input propertychange focus', '#sql-textarea', function() {
             //$(this).highlightTextarea('setWords', ['select','table']);
@@ -146,7 +164,120 @@
         $(document).on('click', '.param-rm', function(){
             $(this).parents('.param-item').remove();
         });
+
+        $("#sql-confirm").click(function () {
+            $('#para_list_modal').modal('show');
+        });
+
+        $("#sql-add").click(function () {
+            var data = get_request_data();
+            console.log( data );
+            $.ajax({
+                url:'/sql/add_sql_ajax',
+                type:'POST',
+                contentType: 'application/json',
+                async:true,
+                data:data,
+                timeout:5000,
+                dataType:'json',
+                success:function(data){
+                    console.log( data );
+                    $('#para_list_modal').modal('hide');
+                }
+            });
+
+        });
+
+        $("#run-sql").click(function () {
+            var data = get_request_data();
+            console.log( data );
+            $.ajax({
+                url:'/sql/run_by_client',
+                type:'POST',
+                contentType: 'application/json',
+                async:true,
+                data:data,
+                timeout:5000,
+                dataType:'json',
+                success:function(data){
+                    console.log( data );
+                    $("#sql-result > thead").empty();
+                    $("#sql-result > tbody").empty();
+                    // 判断 sql
+                    var sql = data["sql"];
+                    $("#true-sql").text( sql );
+                    // 判断 result 的合法性
+                    if( typeof data["result"] == "undefine" || data["result"] == null || data["result"].length <= 0){
+                        return;
+                    }
+                    var result = data["result"];
+                    var size = result.length;
+                    for(var i=0; i< size; i++){
+                        var item = result[i];
+                        var head = "<tr>";
+                        var row = "<tr>";
+                        for (var key in item){
+                            head += "<th>" + key + "</th>";
+                            row += "<td>" + item[key] + "</td>";
+                        }
+                        head += "</tr>";
+                        row += "</tr>";
+                        if( i == 0 ){
+                            $("#sql-result > thead").append( head );
+                        }
+                        $("#sql-result > tbody").append( row );
+                    }
+                }
+            });
+
+        });
+
+        /* ------------ hosts  的自动提示功能－－－－－－－－*/
+        var hosts = /*[[${hosts}]]*/;
+        $("input[name='host']").typeahead({
+            source: hosts
+        });
+        $("input[name='host']").bind('input focus propertychange',function () {
+            var this_val = $(this).val();
+            if( this_val == "" ||  this_val == " "){
+                $(".all-service").css("display", "block");
+            }else{
+                $(".all-service").css("display", "none");
+            }
+        });
+        // 添加完成后就可以绑定事件
+        $(".dropdown-li").bind('click',function () {
+            var text_value = $(this).text().trim();
+            $("input[name='host']").val(text_value);
+            $(".all-service").css("display", "none");
+        });
+        // 鼠标离开要隐藏掉
+        $("input[name='host']").blur(function (e) {
+            setTimeout(function () { //因为点击事件和鼠标离开事件绑定在同一个对象，所有要延迟一下
+                console.log("aa");
+                $(".all-service").css("display", "none");
+            }, 500);
+        });
     });
+
+    function get_request_data() {
+        var data = {};
+        var param_list = [];
+        $(".json-param").each(function () {
+            var param = {};
+            param.field = $(this).find("input[name='field']").val();
+            param.value = $(this).find("input[name='field-value']").val();
+            param_list.push(param);
+        });
+        data.param_list = param_list;
+        data.host = $("input[name='host']").val();
+        data.username = $("input[name='username']").val();
+        data.password = $("input[name='password']").val();
+        data.sql = $("#sql-textarea").val();
+        data = JSON.stringify(data);
+        set_cookie("form_data", data);
+        return data;
+    }
 
     function sql_init() {
         $("#sql-textarea").highlightTextarea({
@@ -160,6 +291,48 @@
                 words: 'limit'
             }]
         });
+    }
+
+    function form_init() {
+        var data = get_cookie("form_data");
+        var form_data = JSON.parse(data);
+        if( typeof form_data == "undefine" || form_data == null ){
+            return
+        }
+        $("input[name='host']").val( form_data.host );
+        $("input[name='username']").val( form_data.username );
+        $("input[name='password']").val( form_data.password );
+        $("#sql-textarea").val( form_data.sql );
+
+        var params = form_data.param_list;
+        var param_size = params.length;
+        for(var i = 0; i < param_size; i++){
+            $("#add_param").append( get_sql_param_tpl(params[i]['field'],params[i]['value']) );
+        }
+
+    }
+
+    function get_sql_param_tpl(key, value) {
+        if(!key){
+            key='';
+        }
+        if(!value){
+            value="";
+        }
+        var tpl = '<div class="form-group param-item json-param">'+
+                '<div class="sql_param_key_div form-group">'+
+                '<input type="text" name="field" class="form-control sql_param_key" value="' + key + '" placeholder="key">'+
+                '</div>'+
+                '<div class="param_black_div"></div>'+
+                '<div class="form-group sql_param_value_div">'+
+                '<input type="text" name="field-value" class="form-control sql_param_value" value="' + value + '" placeholder="value">'+
+                '</div>'+
+                '<div class="param_black_div"></div>'+
+                '<div class="form-group right-button">'+
+                '<a class="btn btn-default btn-xs glyphicon glyphicon-remove param-rm" href="#"></a>'+
+                '</div>'+
+                '</div>';
+        return tpl;
     }
     /*]]>*/
 </script>
