--- a/src/main/resources/templates/history.html
+++ b/src/main/resources/templates/history.html
@@ -20,7 +20,6 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
                 <ul class="nav navbar-nav">
                     <li><a href="/sql/addSql">add sql</a></li>
-                    <li><a href="/sql/mixQuery">mix query</a></li>
                     <li><a href="/list">list</a></li>
                     <li><a href="/statistics">statistics</a></li>
                     <li class="active"><a href="/history">history</a></li>
@@ -32,8 +31,8 @@
 <div class="clearfix nav-height"></div>
 <div class="container-fluid container-title">
     <div class="container container-title-content">
-        <h1>Create restful api</h1>
-        <p>将 sql 调用转换成 restful 接口的调用，这样方便分析统计 sql 的执行效率，简化service的开发。</p>
+        <h1>History</h1>
+        <p>可以查看 api 的运行历史及运行情况。</p>
     </div>
 </div>
 <div class="container">
@@ -47,29 +46,27 @@
                     <thead>
                     <tr>
                         <th>#</th>
-                        <th>First Name</th>
-                        <th>Last Name</th>
-                        <th>Username</th>
+                        <th>sql_id</th>
+                        <th>run_sql</th>
+                        <th>client_ip</th>
+                        <th>client_type</th>
+                        <th>start_time</th>
+                        <th>end_time</th>
+                        <th>run_time</th>
+                        <th>detail</th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">3</th>
-                        <td>Larry</td>
-                        <td>the Bird</td>
-                        <td>@twitter</td>
+                    <tr th:each="item : ${hisotryList}">
+                        <td th:text="${item.id}">id</td>
+                        <td th:text="${item.sql_id}">type</td>
+                        <td th:text="${item.run_sql}">type</td>
+                        <td th:text="${item.client_ip}">type</td>
+                        <td th:text="${item.client_type}">type</td>
+                        <td th:text="${#dates.format(item.start_time, 'yyyy-MM-dd HH:mm')}">type</td>
+                        <td th:text="${#dates.format(item.end_time, 'yyyy-MM-dd HH:mm')}">type</td>
+                        <td th:text="${item.run_time}">type</td>
+                        <td><button type="button" class="btn btn-success btn-xs">detail</button></td>
                     </tr>
                     </tbody>
                 </table>
