--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <link href="../../vender/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet" charset="utf-8" />
+    <link href="../../vender/datatables/dataTables.bootstrap.css" rel="stylesheet" charset="utf-8" />
     <link href="../../css/common.css" rel="stylesheet" charset="utf-8" />
     <style>
 
@@ -19,7 +20,6 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
                 <ul class="nav navbar-nav">
                     <li><a href="/sql/addSql">add sql</a></li>
-                    <li><a href="/sql/mixQuery">mix query</a></li>
                     <li class="active"><a href="/list">list</a></li>
                     <li><a href="/statistics">statistics</a></li>
                     <li><a href="/history">history</a></li>
@@ -31,8 +31,8 @@
 <div class="clearfix nav-height"></div>
 <div class="container-fluid container-title">
     <div class="container container-title-content">
-        <h1>Create restful api</h1>
-        <p>将 sql 调用转换成 restful 接口的调用，这样方便分析统计 sql 的执行效率，简化service的开发。</p>
+        <h1>api List</h1>
+        <p>查看 api 详情列表</p>
     </div>
 </div>
 <div class="container">
@@ -42,7 +42,7 @@
                 <h3 class="panel-title">Job list</h3>
             </div>
             <div class="panel-body">
-                <table class="table table-bordered">
+                <table id="mytable" class="table table-bordered">
                     <thead>
                     <tr>
                         <th>#</th>
@@ -52,23 +52,11 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">3</th>
-                        <td>Larry</td>
-                        <td>the Bird</td>
-                        <td>@twitter</td>
+                    <tr th:each="item : ${sqlList}">
+                        <td th:text="${item.id}">id</td>
+                        <td th:text="${item.client_sql}">type</td>
+                        <td th:text="${item.host}">type</td>
+                        <td th:text="${item.username}">type</td>
                     </tr>
                     </tbody>
                 </table>
@@ -79,4 +67,13 @@
 </body>
 <script src="../../vender/jQuery/jquery-2.2.3.min.js"></script>
 <script src="../../vender/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+<script src="../../vender/datatables/jquery.dataTables.js"></script>
+<script src="../../vender/datatables/dataTables.bootstrap.js"></script>
+<script>
+    $("#mytable").dataTable({
+        "aaSorting": [
+            [ 0, "desc" ]
+        ]
+    } );
+</script>
 </html>
