--- a/src/main/resources/templates/add_sql.html
+++ b/src/main/resources/templates/add_sql.html
@@ -30,10 +30,21 @@
         border-radius: 50px;
     }
 
+    #ping-jdbc{
+        width: 40px;
+    }
     .sql-button{
         margin-right: 15px;
         width: 70px;
     }
+
+    pre {padding: 5px; margin: 5px; }
+    .string { color: green; }
+    .number { color: darkorange; }
+    .boolean { color: blue; }
+    .null { color: magenta; }
+    .key { color: red; }
+
 </style>
 <body>
 <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -73,29 +84,30 @@
                     <label>jdbc 地址</label>
                     <div class="form-group">
                         <div class="form-group" style="width: 40%; float: left">
-                            <input type="text" name="host" class="form-control" placeholder="host" />
+                            <input type="text" name="host" class="form-control" placeholder="host" maxlength="100" />
                             <ul class="typeahead dropdown-menu all-service" role="listbox" style="top: 278px; left: 119.5px;display:none">
                                 <li class="dropdown-li" th:each="item : ${hosts}"><a class="dropdown-item" th:text="${item}"></a></li>
                             </ul>
                         </div>
                         <div class="param_black_div"></div>
                         <div class="form-group" style="width: 23%; float: left">
-                            <input type="text" name="username" class="form-control" placeholder="username" />
+                            <input type="text" name="username" class="form-control" maxlength="30" placeholder="username" />
                         </div>
                         <div class="param_black_div"></div>
                         <div class="form-group" style="width: 23%; float: left">
-                            <input type="text" name="password" class="form-control" placeholder="password" />
+                            <input type="text" name="password" class="form-control" maxlength="30" placeholder="password" />
                         </div>
                         <div class="param_black_div"></div>
                         <div class="form-group right-button">
-                            <a class="btn btn-default btn-xs" href="#">test</a>
+                            <a class="btn btn-default btn-xs" href="#" id="ping-jdbc">ping</a>
                         </div>
                     </div>
                 </div><!-- .form-group -->
                 <div class="clearfix"></div>
                 <div class="form-group">
                     <label>sql</label>
-                    <textarea id="sql-textarea" class="form-control input-width" style="background: none;font-size:18px;height:100px">select * from table user limit 1</textarea>
+                    <textarea id="sql-textarea" maxlength="1000" class="form-control input-width" style="background: none;font-size:18px;height:100px">select * from table user limit 1</textarea>
+                    <span>您已输入</span><span id="sql_input_num">0</span>/1000字
                 </div><!-- .form-group -->
                 <div class="form-group" id="add_param">
                     <label>添加参数</label>
@@ -137,6 +149,18 @@
     </div>
 </div>
 
+<!-- Modal -->
+<div class="modal fade" id="add_result_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog modal-sm" role="document">
+        <div class="modal-content">
+            <div class="modal-body">
+                <h5>您的接口请求参数如下：</h5>
+                <pre id="add_result_content"></pre>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <script src="../../vender/jQuery/jquery-2.2.3.min.js"></script>
 <script src="../../vender/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
@@ -148,8 +172,8 @@
     var sql_param_tpl= get_sql_param_tpl();
 
     $(function () {
-        sql_init();
         form_init();
+        sql_init();
         $(".highlightTextarea").css("width", "90%");
         $(document).on('input propertychange focus', '#sql-textarea', function() {
             //$(this).highlightTextarea('setWords', ['select','table']);
@@ -183,6 +207,14 @@
                 success:function(data){
                     console.log( data );
                     $('#para_list_modal').modal('hide');
+                    $("#add_result_modal").modal('show');
+
+                    var form_data = get_cookie("form_data");
+                    form_data = JSON.parse(form_data);
+                    var req = {};
+                    req.id = data.id;
+                    req.param = form_data.param_list;
+                    $("#add_result_content").html(syntaxHighlight(req));
                 }
             });
 
@@ -230,6 +262,38 @@
                 }
             });
 
+        });
+
+        $("#ping-jdbc").click(function () {
+            var data = {};
+            data = JSON.stringify(data);
+            $.ajax({
+                url:'/sql/test_jdbc_ajax',
+                type:'POST',
+                contentType: 'application/json',
+                async:true,
+                data:data,
+                timeout:5000,
+                dataType:'json',
+                success:function(data){
+                    var result = data.result;
+                    if( result.error_code == 0 ){
+                        $("#ping-jdbc").removeClass("btn-danger");
+                        $("#ping-jdbc").addClass("btn-success");
+                        $("#ping-jdbc").text("ok!!");
+                    }else{
+                        $("#ping-jdbc").removeClass("btn-success");
+                        $("#ping-jdbc").addClass("btn-danger");
+                        $("#ping-jdbc").text("fail");
+                    }
+                }
+            });
+        });
+
+        $("input[name='host'],input[name='username'],input[name='password']").bind('input propertychange', function() {
+            $("#ping-jdbc").removeClass("btn-danger");
+            $("#ping-jdbc").removeClass("btn-success");
+            $("#ping-jdbc").text("ping");
         });
 
         /* ------------ hosts  的自动提示功能－－－－－－－－*/
@@ -285,12 +349,25 @@
                 color: '#ADF0FF',
                 words: 'select'
             }, {
+                color: '#ADF0FF',
+                words: 'where'
+            }, {
                 color: '#FFFF00',
-                words: 'table'
+                words: '{'
+            }, {
+                color: '#FFFF00',
+                words: '$'
+            }, {
+                color: '#FFFF00',
+                words: '}'
             }, {
                 words: 'limit'
             }]
         });
+
+        var content = $("#sql-textarea").val();
+        var count = content.length;
+        $("#sql_input_num").text(count);
     }
 
     function form_init() {
@@ -321,11 +398,11 @@
         }
         var tpl = '<div class="form-group param-item json-param">'+
                 '<div class="sql_param_key_div form-group">'+
-                '<input type="text" name="field" class="form-control sql_param_key" value="' + key + '" placeholder="key">'+
+                '<input type="text" name="field" maxlength="30" class="form-control sql_param_key" value="' + key + '" placeholder="key">'+
                 '</div>'+
                 '<div class="param_black_div"></div>'+
                 '<div class="form-group sql_param_value_div">'+
-                '<input type="text" name="field-value" class="form-control sql_param_value" value="' + value + '" placeholder="value">'+
+                '<input type="text" name="field-value" maxlength="30" class="form-control sql_param_value" value="' + value + '" placeholder="value">'+
                 '</div>'+
                 '<div class="param_black_div"></div>'+
                 '<div class="form-group right-button">'+
@@ -333,6 +410,28 @@
                 '</div>'+
                 '</div>';
         return tpl;
+    }
+
+    function syntaxHighlight(json) {
+        if (typeof json != 'string') {
+            json = JSON.stringify(json, undefined, 2);
+        }
+        json = json.replace(/&/g, '&').replace(/</g, '<').replace(/>/g, '>');
+        return json.replace(/("(\\u[a-zA-Z0-9]{4}|\\[^u]|[^\\"])*"(\s*:)?|\b(true|false|null)\b|-?\d+(?:\.\d*)?(?:[eE][+\-]?\d+)?)/g, function(match) {
+            var cls = 'number';
+            if (/^"/.test(match)) {
+                if (/:$/.test(match)) {
+                    cls = 'key';
+                } else {
+                    cls = 'string';
+                }
+            } else if (/true|false/.test(match)) {
+                cls = 'boolean';
+            } else if (/null/.test(match)) {
+                cls = 'null';
+            }
+            return '<span class="' + cls + '">' + match + '</span>';
+        });
     }
     /*]]>*/
 </script>
